fix: travis tests

--- a/tests/prereqs.yml
+++ b/tests/prereqs.yml
@@ -1,5 +1,10 @@
 ---
 
+- hosts: server
+  tasks:
+    - name: installing repo for Java 8 in Ubuntu
+      apt_repository: repo='ppa:openjdk-r/ppa'
+
 - hosts: localhost
   connection: local
   remote_user: root
