--- a/.travis.yml
+++ b/.travis.yml
@@ -16,18 +16,19 @@ services:
 
 before_install:
   - 'sudo docker pull ${distribution}:${version}'
-  - 'sudo docker build --no-cache --rm --file=tests/travis/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible travis'
+  - 'sudo docker build --no-cache --rm --file=tests/travis/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible tests'
 
 script:
   - container_id=$(mktemp)
   - 'sudo docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/etc/ansible/roles/gmambro.zookeeper:ro ${distribution}-${version}:ansible > "${container_id}"'
-  - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/gmambro.zookeeper/test.yml --syntax-check'
-  
+
 # prereqs
-  - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/gmambro.zookeeper/tests/prereqs.yml'
   - 'sudo docker exec --tty "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-galaxy install geerlingguy.java'
+  - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/gmambro.zookeeper/tests/prereqs.yml'
   
-  - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/gmambro.zookeeper/tests.yml'
+  - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/gmambro.zookeeper/tests/test.yml --syntax-check'
+  
+  - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/gmambro.zookeeper/tests/test.yml'
   - >
     sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/gmambro.zookeeper/tests/test.yml
 #    | grep -q 'changed=0.*failed=0'
