--- a/tasks/facts.yml
+++ b/tasks/facts.yml
@@ -1,18 +1,31 @@
 ---
 
 - set_fact:
-    zookeeper_node_id: "{{ zookeeper_ensemble[inventory_hosname]['id'] }}"
-  when: |
-    zookeeper_ensemble is mapping and
-      inventory_hostname in zookeeper_ensemble
+    zookeeper_node_id_from: node
+  when:
+    zookeeper_node_id is defined
 
 - set_fact:
-    zookeeper_node_id: "{{item.0|int + 1 }}"
+    zookeeper_node_id: "{{ item.id }}"
+    zookeeper_node_id_from: key
+  with_items:
+    "{{ zookeeper_ensemble }}"
+  when: |
+    zookeeper_node_id is not defined and
+    item.id is defined and
+    item.name is defined and inventory_hostname == item.name
+
+- set_fact:
+    zookeeper_node_id: "{{ item.0|int + 1 }}"
+    zookeeper_node_id_from: index
   with_indexed_items: "{{ zookeeper_ensemble }}"
   when: |
-    zookeeper_ensemble is not mapping and
+    zookeeper_node_id is not defined and
     inventory_hostname == item.1
 
+- assert:
+    that:
+      - zookeeper_node_id is defined
 
 - debug: var=zookeeper_node_id
 
