fix: remove references to old servce name

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,6 +5,6 @@
 
 - name: restart zookeeper
   service: 
-    name: zookeeper-server 
+    name: zookeeper
     state: restarted
   when:  zookeeper_manage_service 
