added zookeeper_facts module

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -5,5 +5,9 @@
     - name: gmambro.zookeeper
       vars:
         zookeeper_node_id: 1
+  tasks:
+    - name: Get Facts
+      zookeeper_facts:
 
-
+    - debug:
+        var: zookeeper_facts
