--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,24 +2,17 @@ galaxy_info:
   author: Gabriele Mambrini
   description: Ansible role for Apache Zookeeper
 
+  role_name: zookeeper
+  namespace: gmambro
+  
   license: Apache
 
-  min_ansible_version: 2.4
+  min_ansible_version: 2.10
 
   platforms:
     - name: EL
       versions: 
-        - 7
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
-  # - name: SomePlatform
-  #   versions:
-  #   - all
-  #   - 1.0
-  #   - 7
-  #   - 99.99
+        - 8
 
   galaxy_tags:
     - zookeeper
