--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,11 +1,11 @@
 ---
 
-zookeeper_version: 3.4.11
+zookeeper_version: 3.6.3
 
-zookeeper_tarball_name: "zookeeper-{{ zookeeper_version }}.tar.gz"
+zookeeper_tarball_name: "apache-zookeeper-{{ zookeeper_version }}-bin.tar.gz"
 # where to download
 zookeeper_tarball_dir: /opt
-zookeeper_url: "http://www.apache.org/dist/zookeeper/zookeeper-{{ zookeeper_version }}/{{ zookeeper_tarball_name }}"
+zookeeper_url: "https://downloads.apache.org/zookeeper/zookeeper-{{ zookeeper_version }}/{{ zookeeper_tarball_name }}"
 
 zookeeper_client_port: 2181
 zookeeper_connect_port: 2888
@@ -31,7 +31,7 @@ zookeeper_force_myid: true
 zookeeper_manage_service: true
 zookeeper_register_path_env: true
 
-zookeeper_maxClientCnxns: 50
-zookeeper_tickTime: 2000
+zookeeper_max_client_cnxns: 50
+zookeeper_tick_time: 2000
 zookeeper_init_limit: 5
 zookeeper_sync_limit: 2
