--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,8 @@
 ---
-- name: reload systemd
-  command: systemctl daemon-reload
-  when:  ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
+- name: Force systemd to reread configs
+  ansible.builtin.systemd:
+    daemon_reload: yes
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version >= "7"
 
 - name: restart zookeeper
   service: 
