--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -10,19 +10,21 @@
     src: zookeeper.service.j2 
   notify: reload systemd
 
-- meta: flush_handlers
+- name: Flush handlers
+  meta: flush_handlers
 
 - name: Configure Zookeeper server
   template: 
     src: zoo.cfg.j2 
     dest: "{{ zookeeper_conf_file }}"
+    mode: 0644
   notify: restart zookeeper
 
 - name: Create Zookeeper data directory
   file: 
     path: "{{ zookeeper_data_dir }}"
     state: directory
-    mode: 755
+    mode: 0755
     owner: "{{ zookeeper_user }}"
     group: "{{ zookeeper_group }}"
 
@@ -30,5 +32,6 @@
   template: 
     src: myid.j2 
     dest: "{{ zookeeper_data_dir }}/myid"
+    mode: 0644
   when: zookeeper_force_myid
   notify: restart zookeeper
