--- a/tasks/install_tgz.yml
+++ b/tasks/install_tgz.yml
@@ -1,22 +1,25 @@
 ---
 
-- name: "Ensure the zookeeper dir exists"
+- name: Ensure the zookeeper dir exists
   file:
-    path: "{{zookeeper_dir}}"
-    state: "directory"
-
+    path: "{{ zookeeper_dir }}"
+    state: "directory"   
+    mode: 0755
+    
 - name: Download zookeeper version.
   get_url:
-    url: "{{zookeeper_url}}"
-    dest: "{{zookeeper_tarball_dir}}/{{ zookeeper_tarball_name}}"
-
+    url: "{{ zookeeper_url }}"
+    dest: "{{ zookeeper_tarball_dir }}/{{ zookeeper_tarball_name }}"
+    mode: 0644
+    
 - name: Extract tarball.
   unarchive:
-    src: "{{zookeeper_tarball_dir}}/zookeeper-{{zookeeper_version}}.tar.gz"
+    src: "{{ zookeeper_tarball_dir }}/{{ zookeeper_tarball_name }}"
     extra_opts:
-      -  --strip-components=1
-    dest: "{{zookeeper_dir}}"
+      - "--strip-components=1"
+    dest: "{{ zookeeper_dir }}"
     remote_src: yes
+    mode: 0644
 
 - name: Create Zookeeper local group
   group:
@@ -31,12 +34,12 @@
 
 - name: Change ownership on zookeeper directory.
   file:
-    path: "{{zookeeper_dir}}"
+    path: "{{ zookeeper_dir }}"
     state: directory
     owner: "{{ zookeeper_user }}"
     group: "{{ zookeeper_group }}"
-
-
+    mode: 0755
+    
 - name: Add zookeeper's bin dir to the PATH
   copy:
     content: "export PATH=$PATH:{{ zookeeper_bin_dir }}"
